# jsonifier

./: .travis.yml  LICENSE  README.md  build.bash  json-lego.cabal  jsonifier.cabal  stack.yaml
.github/workflows/: integrate.yaml
bench/: Main.hs
bench/Main/: Aeson.hs  BufferBuilder.hs  JsonBytesBuilder.hs  JsonLego.hs  Jsonifier.hs  JsonifierClass.hs  Model.hs
cbits/: dtoa.c  int_encoding.c  json_allocation.c  json_encoding.c
demo/: Main.hs
regression/: Main.hs
samples/: twitter1.json  twitter10.json  twitter100.json  twitter1000.json
test/: Main.hs
test/Main/Util/: HedgehogGens.hs
