name: json-lego
version: 0.1
synopsis: Fast and simple JSON marshalling toolkit
category: JSON
homepage: https://github.com/nikita-volkov/json-lego
bug-reports: https://github.com/nikita-volkov/json-lego/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2020 Nikita Volkov
license: MIT
license-file: LICENSE
build-type: Simple
cabal-version: >=1.10

source-repository head
  type: git
  location: git://github.com/nikita-volkov/json-lego.git

library
  hs-source-dirs: library
  default-extensions: BangPatterns, BlockArguments, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, DerivingVia, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, StrictData, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UnboxedTuples
  default-language: Haskell2010
  exposed-modules:
    JsonLego
  other-modules:
    JsonLego.Allocation
    JsonLego.Ffi.JsonAllocation
    JsonLego.Ffi.JsonEncoding
    JsonLego.Poke
    JsonLego.Prelude
  c-sources:
    cbits/json_allocation.c
    cbits/json_encoding.c
  build-depends:
    base >=4.11 && <5,
    bytestring >=0.10.10 && <0.11,
    ptr-poker >=0.1 && <0.2,
    scientific >=0.3.6.2 && <0.4,
    text >=1 && <2

test-suite demo
  type: exitcode-stdio-1.0
  hs-source-dirs: demo
  main-is: Main.hs
  default-language: Haskell2010
  build-depends:
    json-lego,
    rerebase

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  default-extensions: BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, StrictData, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UnboxedTuples, ViewPatterns
  default-language: Haskell2010
  main-is: Main.hs
  build-depends:
    aeson >=1.4.7.1 && <2,
    hedgehog >=1.0.3 && <2,
    json-lego,
    rerebase >=1.10.0.1 && <2

benchmark bench
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is: Main.hs
  other-modules:
    Main.Aeson
    Main.JsonLego
    Main.Model
  ghc-options: -O2 -threaded "-with-rtsopts=-N"
  default-extensions: BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, StrictData, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UnboxedTuples, ViewPatterns
  default-language: Haskell2010
  build-depends:
    aeson >=1.5.4.1 && <1.6,
    gauge >=0.2.5 && <0.3,
    json-lego,
    rerebase >=1.10.0.1 && <2
