name: jsonifier
version: 0.1.0.2
synopsis: Fast and simple JSON encoding toolkit
description:
  Minimalistic library for encoding JSON directly to strict bytestring.
  .
  The library focuses on 2 aspects: simplicity and performance.
  The API consists of just a few functions and
  achieves performance that is 3 times better than that of \"aeson\"
  in typical use-cases.
  In cases where we deal with really large documents (60MB) the performance
  of \"aeson\" becomes more comparable.
  .
  For further details please refer to README.
category: JSON
homepage: https://github.com/nikita-volkov/jsonifier
bug-reports: https://github.com/nikita-volkov/jsonifier/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2020 Nikita Volkov
license: MIT
license-file: LICENSE
build-type: Simple
cabal-version: >=1.10
extra-source-files:
  README.md
  samples/*.json

source-repository head
  type: git
  location: git://github.com/nikita-volkov/jsonifier.git

library
  hs-source-dirs: library
  default-extensions: BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, StrictData, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UnboxedTuples, ViewPatterns
  default-language: Haskell2010
  exposed-modules:
    Jsonifier
  other-modules:
    Jsonifier.Allocation
    Jsonifier.Ffi
    Jsonifier.Poke
    Jsonifier.Prelude
    Jsonifier.Write
  c-sources:
    cbits/json_allocation.c
    cbits/json_encoding.c
  build-depends:
    base >=4.11 && <5,
    bytestring >=0.10.10 && <0.12,
    ptr-poker >=0.1 && <0.2,
    scientific >=0.3.6.2 && <0.4,
    text >=1 && <2

test-suite demo
  type: exitcode-stdio-1.0
  hs-source-dirs: demo
  main-is: Main.hs
  default-language: Haskell2010
  build-depends:
    jsonifier,
    rerebase

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  default-extensions: BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, StrictData, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UnboxedTuples, ViewPatterns
  default-language: Haskell2010
  main-is: Main.hs
  other-modules:
    Main.Util.HedgehogGens
  build-depends:
    aeson >=1.4.7.1 && <2,
    hedgehog >=1.0.3 && <2,
    jsonifier,
    numeric-limits >=0.1 && <0.2,
    rerebase >=1.10.0.1 && <2

benchmark bench
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is: Main.hs
  other-modules:
    Main.Aeson
    Main.Jsonifier
    Main.Model
  ghc-options: -O2 -threaded "-with-rtsopts=-N"
  default-extensions: BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, StrictData, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UnboxedTuples, ViewPatterns
  default-language: Haskell2010
  build-depends:
    aeson >=1.5.4.1 && <1.6,
    gauge >=0.2.5 && <0.3,
    jsonifier,
    rerebase >=1.10.0.1 && <2,
    text-builder >=0.6.6.1 && <0.7
